[gd_scene load_steps=44 format=3 uid="uid://cavsjvdul058p"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_6n7gx"]
[ext_resource type="Texture2D" uid="uid://d3fajbfni4vf8" path="res://Asset/4. Character/Marcille Donato/Sprite/IDLE/marcille_idle.png" id="1_yi5xf"]
[ext_resource type="AudioStream" uid="uid://b3n04wsi1pbey" path="res://Asset/5. Audio/Option.mp3" id="2_6dfut"]
[ext_resource type="Texture2D" uid="uid://b82xyevb85xeb" path="res://Asset/10. GUI/GUI_Panel.png" id="2_82gar"]
[ext_resource type="AudioStream" uid="uid://dd2ftxj1pcxw0" path="res://Asset/5. Audio/win.mp3" id="2_di1yk"]
[ext_resource type="PackedScene" uid="uid://cgjcn60aw7k1t" path="res://Equipment Items/Weapon/Slot.tscn" id="2_yn7fm"]
[ext_resource type="Texture2D" uid="uid://n3uov4ebrhv8" path="res://Asset/4. Character/Marcille Donato/Sprite/RUNNING/marcille_running.png" id="3_1s3va"]
[ext_resource type="AudioStream" uid="uid://dpqgmymb0vm32" path="res://Asset/5. Audio/game_over.mp3" id="4_a6mtv"]
[ext_resource type="FontFile" uid="uid://ceodpvgjntrsf" path="res://Asset/6. Font/DOSGothic.ttf" id="4_j5edu"]
[ext_resource type="Script" path="res://Utility/Option/Options.gd" id="5_aygid"]
[ext_resource type="PackedScene" uid="uid://c2uu3h8nh60c1" path="res://Equipment Items/PassiveItem/PassiveSlot.tscn" id="7_l6bif"]
[ext_resource type="Texture2D" uid="uid://4vu2tfokjjts" path="res://Asset/3. Food/BF1/BF1_FOOD_1.png" id="7_s8lnq"]
[ext_resource type="Texture2D" uid="uid://c2o05s27yej3o" path="res://Asset/10. GUI/Crying_Marcille_Stamp_Outline_White.png" id="8_8v6g4"]
[ext_resource type="Texture2D" uid="uid://cyainagstrfbe" path="res://Asset/3. Food/Boundary.png" id="8_ghcid"]
[ext_resource type="Texture2D" uid="uid://cvhri0im6wgun" path="res://Asset/3. Food/NameTag.png" id="8_kyple"]
[ext_resource type="Script" path="res://Player/Button_Return.gd" id="9_ic3gl"]
[ext_resource type="Script" path="res://Player/Button_ClearBoard_Return.gd" id="10_q4asp"]
[ext_resource type="PackedScene" uid="uid://dcku74gb8vual" path="res://Equipment Items/Special Weapon/SpecialWeaponSlot.tscn" id="10_wtf1a"]
[ext_resource type="Texture2D" uid="uid://dygghqc8j53ik" path="res://Asset/10. GUI/GUI_Frame.png" id="14_atfuv"]
[ext_resource type="Texture2D" uid="uid://53qmp8rjydvn" path="res://Asset/10. GUI/HealthBar_Stomach_UIpng.png" id="14_w8l2x"]

[sub_resource type="LabelSettings" id="LabelSettings_u1prv"]
line_spacing = 2.0
font = ExtResource("4_j5edu")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_8cgmt"]
font = ExtResource("4_j5edu")
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_g06fu"]
font = ExtResource("4_j5edu")
font_size = 24
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_epbse"]
font = ExtResource("4_j5edu")
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_1l1ag"]
font = ExtResource("4_j5edu")
font_size = 64

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fsgux"]
bg_color = Color(0.176419, 0.176419, 0.176419, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ohyqt"]
bg_color = Color(0, 0.66795, 0.716885, 1)

[sub_resource type="LabelSettings" id="LabelSettings_o2jo5"]
font = ExtResource("4_j5edu")
font_size = 20
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dutvf"]
texture = ExtResource("2_82gar")
region_rect = Rect2(1, 1, 30, 30)

[sub_resource type="LabelSettings" id="LabelSettings_551s0"]
font = ExtResource("4_j5edu")
font_size = 20

[sub_resource type="AtlasTexture" id="AtlasTexture_x0mym"]
atlas = ExtResource("1_yi5xf")
region = Rect2(0, 0, 61, 91)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sfyw"]
atlas = ExtResource("1_yi5xf")
region = Rect2(61, 0, 61, 91)

[sub_resource type="AtlasTexture" id="AtlasTexture_04hk3"]
atlas = ExtResource("1_yi5xf")
region = Rect2(122, 0, 61, 91)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mu78"]
atlas = ExtResource("1_yi5xf")
region = Rect2(183, 0, 61, 91)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilfqp"]
atlas = ExtResource("1_yi5xf")
region = Rect2(244, 0, 61, 91)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4as0"]
atlas = ExtResource("3_1s3va")
region = Rect2(2, 0, 60, 91)

[sub_resource type="AtlasTexture" id="AtlasTexture_4p6k3"]
atlas = ExtResource("3_1s3va")
region = Rect2(62, 0, 60, 91)

[sub_resource type="AtlasTexture" id="AtlasTexture_gean5"]
atlas = ExtResource("3_1s3va")
region = Rect2(122, 0, 60, 91)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipbkl"]
atlas = ExtResource("3_1s3va")
region = Rect2(182, 0, 60, 91)

[sub_resource type="SpriteFrames" id="SpriteFrames_xjkrt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0mym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sfyw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04hk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mu78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilfqp")
}],
"loop": true,
"name": &"Player_Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4as0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4p6k3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gean5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipbkl")
}],
"loop": true,
"name": &"Player_Running",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_o382e"]
radius = 24.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pt40e"]
radius = 28.0

[sub_resource type="CircleShape2D" id="CircleShape2D_21u3o"]
radius = 128.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
scale = Vector2(0.5, 0.5)
motion_mode = 1
script = ExtResource("1_6n7gx")
option_sound = ExtResource("2_6dfut")
win_sound = ExtResource("2_di1yk")
die_sound = ExtResource("4_a6mtv")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ProgressBar_XP" type="ProgressBar" parent="UI"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 0, 1)
offset_right = 1024.0
offset_bottom = 24.0
max_value = 20.0
step = 5.0
show_percentage = false

[node name="Level" type="Label" parent="UI/ProgressBar_XP"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -12.0
offset_right = 48.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(48, 12)
text = "LEVEL 1"
label_settings = SubResource("LabelSettings_u1prv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelUpOptionsBoard" type="Node" parent="UI"]

[node name="Panel" type="NinePatchRect" parent="UI/LevelUpOptionsBoard"]
custom_minimum_size = Vector2(320, 320)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -376.5
offset_top = -288.0
offset_right = 376.5
offset_bottom = 233.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_82gar")
region_rect = Rect2(1, 1, 30, 30)

[node name="TextureRect_FoodIcon" type="TextureRect" parent="UI/LevelUpOptionsBoard/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -208.0
offset_right = 128.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_s8lnq")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect_Boundary" type="TextureRect" parent="UI/LevelUpOptionsBoard/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -220.0
offset_right = 132.0
offset_bottom = -76.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_ghcid")

[node name="TextureRect_MenuTag" type="TextureRect" parent="UI/LevelUpOptionsBoard/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -287.5
offset_top = -75.5
offset_right = 289.5
offset_bottom = -7.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_kyple")
expand_mode = 1

[node name="Label_Menu" type="Label" parent="UI/LevelUpOptionsBoard/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.5
offset_top = -67.5
offset_right = 129.5
offset_bottom = -27.5
grow_horizontal = 2
grow_vertical = 2
text = "HotPot"
label_settings = SubResource("LabelSettings_8cgmt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options" type="VBoxContainer" parent="UI/LevelUpOptionsBoard/Panel" node_paths=PackedStringArray("weapons", "special_weapons", "passive_items", "panel")]
unique_name_in_owner = true
process_mode = 3
layout_mode = 1
offset_left = 132.0
offset_top = 256.0
offset_right = 164.0
offset_bottom = 288.0
script = ExtResource("5_aygid")
weapons = NodePath("../../../BottomGUI/Weapons")
special_weapons = NodePath("../../../BottomGUI/SpecialWeapons")
passive_items = NodePath("../../../BottomGUI/PassiveItems")
panel = NodePath("..")

[node name="Label_1" type="Label" parent="UI/LevelUpOptionsBoard/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -286.0
offset_top = 11.5
offset_right = -254.0
offset_bottom = 43.5
grow_horizontal = 2
grow_vertical = 2
text = "1"
label_settings = SubResource("LabelSettings_g06fu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_2" type="Label" parent="UI/LevelUpOptionsBoard/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -286.0
offset_top = 79.5
offset_right = -254.0
offset_bottom = 111.5
grow_horizontal = 2
grow_vertical = 2
text = "2"
label_settings = SubResource("LabelSettings_g06fu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_3" type="Label" parent="UI/LevelUpOptionsBoard/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -286.0
offset_top = 147.5
offset_right = -254.0
offset_bottom = 179.5
grow_horizontal = 2
grow_vertical = 2
text = "3"
label_settings = SubResource("LabelSettings_g06fu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="KnockDownBoard" type="Node" parent="UI"]

[node name="Panel_GameOver" type="NinePatchRect" parent="UI/KnockDownBoard"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(320, 320)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -376.5
offset_top = -288.0
offset_right = 376.5
offset_bottom = 233.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_82gar")
region_rect = Rect2(1, 1, 30, 30)

[node name="Label" type="Label" parent="UI/KnockDownBoard/Panel_GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.5
offset_top = -193.5
offset_right = 144.5
offset_bottom = -129.5
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_epbse")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="UI/KnockDownBoard/Panel_GameOver"]
layout_mode = 0
offset_top = 179.0
offset_right = 753.0
offset_bottom = 339.0
texture = ExtResource("8_8v6g4")
expand_mode = 1
stretch_mode = 5

[node name="Button_Return" type="Button" parent="UI/KnockDownBoard/Panel_GameOver"]
process_mode = 3
layout_mode = 0
offset_left = 249.0
offset_top = 387.0
offset_right = 505.0
offset_bottom = 451.0
theme_override_fonts/font = ExtResource("4_j5edu")
theme_override_font_sizes/font_size = 32
text = "RETURN TO START"
script = ExtResource("9_ic3gl")

[node name="GameClearBoard" type="Node" parent="UI"]

[node name="Panel_GameClear" type="NinePatchRect" parent="UI/GameClearBoard"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -376.5
offset_top = -288.0
offset_right = 376.5
offset_bottom = 233.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_82gar")
region_rect = Rect2(1, 1, 30, 30)

[node name="Label" type="Label" parent="UI/GameClearBoard/Panel_GameClear"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.5
offset_top = -193.5
offset_right = 129.5
offset_bottom = -129.5
grow_horizontal = 2
grow_vertical = 2
text = "CLEAR!
"
label_settings = SubResource("LabelSettings_1l1ag")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button_ClearBoard_Return" type="Button" parent="UI/GameClearBoard/Panel_GameClear"]
process_mode = 3
layout_mode = 0
offset_left = 257.0
offset_top = 389.0
offset_right = 505.0
offset_bottom = 453.0
theme_override_fonts/font = ExtResource("4_j5edu")
theme_override_font_sizes/font_size = 32
text = "RETURN TO START"
script = ExtResource("10_q4asp")

[node name="BottomGUI" type="Node" parent="UI"]

[node name="BottomGUIBackground" type="NinePatchRect" parent="UI/BottomGUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = 248.0
offset_right = 368.0
offset_bottom = 368.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("14_atfuv")
region_rect = Rect2(7, 2, 18, 28)

[node name="HealthBarGUI" type="Node" parent="UI/BottomGUI"]

[node name="HealthProgressBar" type="ProgressBar" parent="UI/BottomGUI/HealthBarGUI"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = 273.0
offset_right = 64.0
offset_bottom = 349.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_j5edu")
theme_override_font_sizes/font_size = 24
theme_override_styles/background = SubResource("StyleBoxFlat_fsgux")
theme_override_styles/fill = SubResource("StyleBoxFlat_ohyqt")
step = 1.0
value = 39.0
fill_mode = 3
show_percentage = false

[node name="Sprite2D" type="Sprite2D" parent="UI/BottomGUI/HealthBarGUI"]
position = Vector2(512, 693)
texture = ExtResource("14_w8l2x")

[node name="Weapons" type="HBoxContainer" parent="UI/BottomGUI"]
offset_left = 268.0
offset_top = 648.0
offset_right = 440.0
offset_bottom = 688.0

[node name="Slot" parent="UI/BottomGUI/Weapons" instance=ExtResource("2_yn7fm")]
layout_mode = 2

[node name="Slot2" parent="UI/BottomGUI/Weapons" instance=ExtResource("2_yn7fm")]
layout_mode = 2

[node name="Slot3" parent="UI/BottomGUI/Weapons" instance=ExtResource("2_yn7fm")]
layout_mode = 2

[node name="Slot4" parent="UI/BottomGUI/Weapons" instance=ExtResource("2_yn7fm")]
layout_mode = 2

[node name="SpecialWeapons" type="HBoxContainer" parent="UI/BottomGUI"]
offset_left = 268.0
offset_top = 692.0
offset_right = 440.0
offset_bottom = 732.0

[node name="SpecialWeaponSlot" parent="UI/BottomGUI/SpecialWeapons" instance=ExtResource("10_wtf1a")]
layout_mode = 2

[node name="SpecialWeaponSlot2" parent="UI/BottomGUI/SpecialWeapons" instance=ExtResource("10_wtf1a")]
layout_mode = 2

[node name="SpecialWeaponSlot3" parent="UI/BottomGUI/SpecialWeapons" instance=ExtResource("10_wtf1a")]
layout_mode = 2

[node name="SpecialWeaponSlot4" parent="UI/BottomGUI/SpecialWeapons" instance=ExtResource("10_wtf1a")]
layout_mode = 2

[node name="PassiveItems" type="GridContainer" parent="UI/BottomGUI"]
offset_left = 584.0
offset_top = 649.0
offset_right = 756.0
offset_bottom = 733.0
columns = 4

[node name="PassiveSlot" parent="UI/BottomGUI/PassiveItems" instance=ExtResource("7_l6bif")]
layout_mode = 2

[node name="PassiveSlot2" parent="UI/BottomGUI/PassiveItems" instance=ExtResource("7_l6bif")]
layout_mode = 2

[node name="PassiveSlot3" parent="UI/BottomGUI/PassiveItems" instance=ExtResource("7_l6bif")]
layout_mode = 2

[node name="PassiveSlot4" parent="UI/BottomGUI/PassiveItems" instance=ExtResource("7_l6bif")]
layout_mode = 2

[node name="PassiveSlot5" parent="UI/BottomGUI/PassiveItems" instance=ExtResource("7_l6bif")]
layout_mode = 2

[node name="PassiveSlot6" parent="UI/BottomGUI/PassiveItems" instance=ExtResource("7_l6bif")]
layout_mode = 2

[node name="PassiveSlot7" parent="UI/BottomGUI/PassiveItems" instance=ExtResource("7_l6bif")]
layout_mode = 2

[node name="PassiveSlot8" parent="UI/BottomGUI/PassiveItems" instance=ExtResource("7_l6bif")]
layout_mode = 2

[node name="SpecialWeaponShortCutLabels" type="Node" parent="UI/BottomGUI"]

[node name="Label_Q" type="Label" parent="UI/BottomGUI/SpecialWeaponShortCutLabels"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -244.0
offset_top = 325.0
offset_right = -224.0
offset_bottom = 348.0
grow_horizontal = 2
grow_vertical = 2
text = "Q"
label_settings = SubResource("LabelSettings_o2jo5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_W" type="Label" parent="UI/BottomGUI/SpecialWeaponShortCutLabels"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 325.0
offset_right = -180.0
offset_bottom = 348.0
grow_horizontal = 2
grow_vertical = 2
text = "W"
label_settings = SubResource("LabelSettings_o2jo5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_E" type="Label" parent="UI/BottomGUI/SpecialWeaponShortCutLabels"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.0
offset_top = 325.0
offset_right = -136.0
offset_bottom = 348.0
grow_horizontal = 2
grow_vertical = 2
text = "E"
label_settings = SubResource("LabelSettings_o2jo5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_R" type="Label" parent="UI/BottomGUI/SpecialWeaponShortCutLabels"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = 325.0
offset_right = -92.0
offset_bottom = 348.0
grow_horizontal = 2
grow_vertical = 2
text = "R"
label_settings = SubResource("LabelSettings_o2jo5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContainerLabels" type="Node" parent="UI/BottomGUI"]

[node name="Label_Parties" type="Label" parent="UI/BottomGUI/ContainerLabels"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -351.0
offset_top = 265.0
offset_right = -249.0
offset_bottom = 305.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_dutvf")
text = "Parties"
label_settings = SubResource("LabelSettings_551s0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_Special" type="Label" parent="UI/BottomGUI/ContainerLabels"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -351.0
offset_top = 309.0
offset_right = -249.0
offset_bottom = 349.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_dutvf")
text = "Special"
label_settings = SubResource("LabelSettings_551s0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label_Passive" type="Label" parent="UI/BottomGUI/ContainerLabels"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 257.0
offset_top = 285.0
offset_right = 359.0
offset_bottom = 325.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_dutvf")
text = "Passive"
label_settings = SubResource("LabelSettings_551s0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Control" type="Control" parent="Camera2D"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="WindowFilter" type="ColorRect" parent="Camera2D/Control"]
layout_mode = 0
offset_left = -1024.0
offset_top = -768.0
offset_right = 1024.0
offset_bottom = 768.0
color = Color(1, 1, 1, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_xjkrt")
animation = &"Player_Running"
autoplay = "Player_Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_o382e")

[node name="SelfDamageHitBox" type="Area2D" parent="."]
position = Vector2(0, 62)
collision_layer = 0
collision_mask = 6

[node name="HitBoxCollision" type="CollisionShape2D" parent="SelfDamageHitBox"]
unique_name_in_owner = true
position = Vector2(0, -62)
shape = SubResource("CircleShape2D_pt40e")

[node name="Timer_HitBoxRenew" type="Timer" parent="."]
autostart = true

[node name="Magnet" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D_Magnet" type="CollisionShape2D" parent="Magnet"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_21u3o")

[connection signal="pressed" from="UI/KnockDownBoard/Panel_GameOver/Button_Return" to="UI/KnockDownBoard/Panel_GameOver/Button_Return" method="_on_pressed"]
[connection signal="pressed" from="UI/GameClearBoard/Panel_GameClear/Button_ClearBoard_Return" to="UI/GameClearBoard/Panel_GameClear/Button_ClearBoard_Return" method="_on_pressed"]
[connection signal="body_entered" from="SelfDamageHitBox" to="." method="_on_self_damage_hit_box_body_entered"]
[connection signal="timeout" from="Timer_HitBoxRenew" to="." method="_on_timer_hit_box_renew_timeout"]
[connection signal="area_entered" from="Magnet" to="." method="_on_magnet_area_entered"]
